# covid-sim

./: .gitignore  CMakeLists.txt  CovidSim.cpp  ParameterKeys.txt
ToBringBack/src/: Bitmap.cpp  CalcInfSusc.cpp  Dist.cpp  Sweep.cpp
docs/: build.md
include/: Bitmap.h  CovidSim.h  Defines.h  Model.h  Parameters.h  ParametersReader.h  Utilities.h
src/: Kernels.cpp  Parameters.cpp  ParametersReader.cpp  Rand.cpp  SetupModel.cpp  Update.cpp  Utilities.cpp  binio.cpp
